# Interactive-RayTracer

./: .cproject  .directory  .gitignore  .project  CMakeLists.txt  IRT.mm  SConstruct  annotate.h  boost-darwin.scons  boost-linux2.scons  boost-win32.scons  clang-darwin.scons  common.scons  conf.py  doxygen.py  gcc-darwin.scons  gcc-linux2.scons  icl-linux2.scons  index.rst  irt.doxyfile  irt.sln  irt.vcproj  msvc-win32.scons  python-darwin.scons  python-linux2.scons  python-win32.scons  python_compile.py  tbb-darwin.scons  tbb-linux2.scons  tbb-win32.scons
IRT/: CMakeLists.txt  IRT.i  SConstruct  __init__.py  bounding_box.h  bounding_box.i  build_kdtree.h  common.h  kdtree.h  kdtree.i  light.cpp  light.h  light.i  namespaces.h  numpy.i  primitives.cpp  primitives.h  primitives.i  ray.cpp  ray.h  ray.i  raytracer.h  raytracer.i  simple_scene.cpp  simple_scene.h  simple_scene.i
IRT/samplers/: halton_sampler.h  jittered_sampler.h  multi_jittered_sampler.h  nrooks_sampler.h  random_sampler.h  uniform_sampler.h
Python/: CMakeLists.txt  Core.cpp  __init__.py
examples/: display_dat.py  display_test.py  display_times.py  hitdistance_dat.py  hitlevel_dat.py  hitlevel_image.py  measure_dat.py  measure_image.py  profile.sh  qt_app.py  sample.py  still_image.py  timeit_image.py  times  wx_app.py
tests/: CMakeLists.txt  SConstruct  boost_main_test.cpp  test_functions.cpp  test_light.cpp  test_primitives.cpp  test_raytracer.cpp  test_simple_scene.cpp  test_vector.cpp
tools/: container_iterator_temp.h  expression_template_temp.h  matrix.h  test_functions.h  type_traits.h  vector.h  vector_functions.h  vector_traits.h
